--- a/page-depth-01/References.html
+++ b/page-depth-01/References.html
@@ -536,6 +536,9 @@
                                             target="_blank">PlayStore</a>
                                     </small>
                                 </p>
+                                <p style="margin-top: -2px;margin-bottom: -2px;">
+                                    <a href="https://elearn.daffodilvarsity.edu.bd/" target="_blank">Blended Learning Center</a>
+                                </p>
                             </div>
                         </td>
                     </tr>
