--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
   <meta property="og:type" content="website">
 
   <!-- WEBSITE PREVIEW -->
+   <style>
+    li{
+      padding:20px;
+    }
+   </style>
 
   <style>
     table,
@@ -110,7 +115,8 @@
   </div>
 
   <!-- <div  style="background-color: #333;"> -->
-  <div style="background-color: 	#FAF9F6; margin: 20px;border-radius: 20px;margin-bottom: 50px;box-shadow: 0.5px 0.5px 10px black;">
+  <div
+    style="background-color: 	#FAF9F6; margin: 20px;border-radius: 20px;margin-bottom: 50px;box-shadow: 0.5px 0.5px 10px black;">
 
     <!-- TOP BAR -->
 
@@ -174,7 +180,17 @@
     <div class="faq-icon">?</div>
     <div class="faq-box"></div>
   </div> -->
+<div style="margin-bottom: 500px;">
+    <hr style="border: 5px solid rgba(90, 85, 85, 0.619);
+                      border-radius: 5px;min-width: 200px;width:70%;">
 
+
+<ul>
+  <li><a href="Academics.html">Academics.html</a></li>
+  <li><a href="Extracurriculars.html">Extracurriculars.html</a></li>
+  <li><a href="References.html">References.html</a></li>
+</ul>
+</div>
 
     <div class="parent-wrap"
       style="background-color: #201f1fe4;padding:15px;border-radius:  30px 0 30px 0;width:80%;max-width: 600px;box-shadow: 0.5px 0.5px 10px black;padding-top: 20px;">
