--- a/Extracurriculars.html
+++ b/Extracurriculars.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/top.navbar.css">
     <style>
         li {
             padding: 20px;
@@ -85,7 +86,18 @@
 <body style="background-color: #333;">
     <div
         style="background-color: 	#FAF9F6; margin: 20px;border-radius: 20px;margin-bottom: 50px;box-shadow: 0.5px 0.5px 10px black;">
-
+        <nav class="navbar">
+            <div class="nav-container">
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="Academics.html">Academics.html</a></li>
+                    <li><a href="#" class="active">Extracurriculars.html</a></li>
+                    <li><a href="References.html">References.html</a></li>
+                    <!-- <li><a href="https://ouits-res.netlify.app/" target="_blank">Resources</a></li> -->
+                    <!-- <li><a href="contact.html">Contact</a></li> -->
+                </ul>
+            </div>
+        </nav>
         <br><br><br>
         <div style="margin-bottom: 100px;">
             <hr style="border: 5px solid rgba(90, 85, 85, 0.619);
