--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="css/selector.css">
   <link rel="stylesheet" href="css/drop-down.css">
   <link rel="stylesheet" href="css/preloader.css">
+  <link rel="stylesheet" href="css/top.navbar.css">
 
   <!-- OFFLINE SUPPORT (WEB APP) -->
 
@@ -108,7 +109,7 @@
   </title>
 </head>
 
-<body style="background-color: #333;">
+<body style="background-color: #333;z-index: 2;">
 
   <div id="preloader" style="margin-top: -20px;">
     <img src="images/preloader.gif" alt="Loading..." width="200">
@@ -118,7 +119,25 @@
   <div
     style="background-color: 	#FAF9F6; margin: 20px;border-radius: 20px;margin-bottom: 50px;box-shadow: 0.5px 0.5px 10px black;">
 
+
+
+
     <!-- TOP BAR -->
+
+    <nav class="navbar">
+      <div class="nav-container">
+        <ul class="nav-links">
+          <li><a href="#" class="active">Home</a></li>
+          <li><a href="Academics.html">Academics.html</a></li>
+          <li><a href="Extracurriculars.html">Extracurriculars.html</a></li>
+          <li><a href="References.html">References.html</a></li>
+          <!-- <li><a href="https://ouits-res.netlify.app/" target="_blank">Resources</a></li> -->
+          <!-- <li><a href="contact.html">Contact</a></li> -->
+        </ul>
+      </div>
+    </nav>
+
+
 
     <!-- <div class="navigation2"></div>
   <script src="backup\test-all-link-together.js"></script> -->
@@ -194,7 +213,7 @@
 
     </div>
 
-   
+
     <br>
     <div class="section"
       data-faq="If you feel like the resources are lacking, and you can solve that, don't be shy and share your resources!">
@@ -203,7 +222,7 @@
     </div>
 
     <!-- -------------------------------------------------------------------- -->
-   
+
 
 
 
