--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
     li {
       padding: 20px;
     }
+
+    /* HIDE SCROLLBAR */
+    ::-webkit-scrollbar {
+      display: none;
+    }
   </style>
 
   <style>
@@ -199,19 +204,7 @@
     <div class="faq-icon">?</div>
     <div class="faq-box"></div>
   </div> -->
-    <div style="margin-bottom: 100px;">
-      <hr style="border: 5px solid rgba(90, 85, 85, 0.619);
-                      border-radius: 5px;min-width: 200px;width:70%;">
-
-
-      <ul>
-        <li><a href="Academics.html">Academics.html</a></li>
-        <li><a href="Extracurriculars.html">Extracurriculars.html</a></li>
-        <li><a href="References.html">References.html</a></li>
-      </ul>
-
-
-    </div>
+   
 
 
     <br>
@@ -307,20 +300,7 @@
           </p>
           <hr>
 
-          <p class="dropdown-item2" style="text-align: left;margin-top: -2px;color: #000000bb;font-size: medium;">
-            #My Information for donation<br>
-          <div class="description" style="margin: 15px;color: #00000082;font-size: small;">
-            <h3>Blood Group: O+ve</h3>
-            <ul>
-              <li style="font-size: medium;">Last donated on: <b>21.01.25</b></li>
-              <!-- <li></li> -->
-            </ul>
-            <b>Note:</b><br>
-            Attending nurse told me that my last blood donation must be 4 months before donating again, otherwise
-            haemoglobin levels might drop. Therefore, please do the math from my last donation date before reaching out.
-          </div>
-          </p>
-          <hr>
+          
 
 
         </div>
