--- a/Academics.html
+++ b/Academics.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/top.navbar.css">
     <link rel="stylesheet" href="css/academics.menubtn.css">
     <link rel="stylesheet" href="css/academics.selector.css">
+    <link rel="stylesheet" href="css/faq.css">
     <style>
         li {
             padding: 5px;
