--- a/Extracurriculars.html
+++ b/Extracurriculars.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/top.navbar.css">
+    <link rel="stylesheet" href="css/faq.css">
     <style>
         li {
             padding: 5px;
@@ -100,53 +101,14 @@
             </div>
         </nav>
         <br><br><br>
-        <div style="margin-bottom: 100px;">
-            <hr style="border: 5px solid rgba(90, 85, 85, 0.619);
-                      border-radius: 5px;min-width: 200px;width:70%;">
-            <ul>
-                <li><a href="index.html">index.html</a></li>
-                <!-- <li><a href="Extracurriculars.html">Extracurriculars.html</a></li> -->
-                <!-- <li><a href="References.html">References.html</a></li> -->
-            </ul>
-        </div>
 
-        <div class="parent-wrap"
-            style="background-color: #201f1fe4;padding:15px;border-radius:  30px 0 30px 0;width:80%;max-width: 600px;box-shadow: 0.5px 0.5px 10px black;padding-top: 20px;">
+        <ul>
+            <li><a href="page-depth-01/Extracurriculars.html">Extracurriculars.html</a></li>
+            <li><a href="page-depth-01/Tutorials.html">Tutorials.html</li>
+            <li><a href="page-depth-01/Blog.html">Blog.html</a></li>
+        </ul>
 
-            <div style="background-color: rgba(0, 0, 0, 0);border-radius: 5px;">
-                <div class="link-logo"><a href="page-depth-01\Extracurriculars.html"><img
-                            src="images\Section-Logo\logo (4).webp" height="100px" width="100px"
-                            style="box-shadow: 0.5px 0.5px 10px rgb(0, 0, 0);border-radius: 100%;"></a>
-                </div>
-                <p style="text-align: center;margin-top: -2px;font-size: medium;color: rgba(255, 255, 255, 0.696);">
-                    Extra<br>Curriculars</p>
-            </div>
-
-            <div style="background-color: rgba(0, 0, 0, 0);border-radius: 5px;">
-                <div class="link-logo"><a href="page-depth-01\Tutorials.html"><img
-                            src="images\Section-Logo\logo (6).webp" height="100px" width="100px"
-                            style="box-shadow: 0.5px 0.5px 10px rgb(0, 0, 0);border-radius: 100%;"></a>
-                </div>
-                <p style="text-align: center;margin-top: -2px;font-size: medium;color: rgba(255, 255, 255, 0.696);">
-                    Tutorials
-                </p>
-            </div>
-            <div style="background-color: rgba(0, 0, 0, 0);border-radius: 5px;">
-                <div class="link-logo"><a href="page-depth-01\Blog.html"><img src="images\Section-Logo\logo (7).webp"
-                            height="100px" width="100px"
-                            style="box-shadow: 0.5px 0.5px 10px rgb(0, 0, 0);border-radius: 100%;"></a>
-                </div>
-                <p style="text-align: center;margin-top: -2px;font-size: medium;color: rgba(255, 255, 255, 0.696);">Blog
-                </p>
-            </div>
-
-        </div>
-
-        <p align=center style="font-size: x-small;color: #00000086;margin-top: 10px;">This Section was inspired by <a
-                href="https://notebot.netlify.app/" target="_blank"
-                style="color: #0244f99d;">https://notebot.netlify.app/</a>
-        </p>
-
+       
 
         <br><br><br> <br><br><br>
     </div>
