--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
   <link rel="stylesheet" href="css/drop-down.css">
   <link rel="stylesheet" href="css/preloader.css">
   <link rel="stylesheet" href="css/top.navbar.css">
+  <link rel="stylesheet" href="css/faq.css">
 
   <!-- OFFLINE SUPPORT (WEB APP) -->
 
 
   <!-- Web App Manifest -->
   <link rel="manifest" href="./manifest.json">
+
 
   <!-- ---------------------------------------------------------------------------- -->
 
