--- a/Extracurriculars.html
+++ b/Extracurriculars.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/top.navbar.css">
-    <link rel="stylesheet" href="css/faq.css">
+  <link rel="stylesheet" href="css/faq.dropdown.css">
+  <link rel="stylesheet" href="css/faq.tooltip.css">
+    <link rel="stylesheet" href="css/credit.css">
     <style>
         li {
             padding: 5px;
@@ -108,11 +110,76 @@
             <li><a href="page-depth-01/Blog.html">Blog.html</a></li>
         </ul>
 
-       
+
 
         <br><br><br> <br><br><br>
-    </div>
+        <br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br>
+        <!-- END CREDIT  -->
+        <div align="center">
+            <div>
+                <!-- SOCIAL LINKS -->
 
+                <p align=center style="color: #00000086;">Join our Socials </p>
+                <p align=center style="color: #00000061;font-size: x-small;margin-top: -10px;"><i>for Updates and
+                        Feedback</i>
+                </p>
+
+                <a href="https://discord.gg/weetUpfS5X" target="_blank"><img src=images\Social-logo\discord-logo.webp
+                        alt="Discord Server (Protein Shake)" width="70" height="70"></a>
+
+                <a href="https://t.me/s/oUITS_ORnU" target="_blank"><img src=images\Social-logo\telegram-logo2.webp
+                        alt="Telegram Channel (oUITS - Online Resources and Updates)" width="70" height="70"></a>
+
+                <a href="https://facebook.com/groups/1074592960836263/" target="_blank"><img
+                        src=images\Social-logo\fb-logo.webp alt="Facebook Group (oUITS - Online Resources)" width="70"
+                        height="70"></a>
+
+                <a href="https://github.com/oU1TS" target="_blank"><img src=images\Social-logo\github-logo2.webp
+                        alt="Facebook Group (oUITS - Online Resources)" width="70" height="70"></a>
+
+            </div>
+
+            <p align=center
+                style="color:rgba(0, 0, 0, 0.422);width: 95%;max-width:500px;font-size: small;font-style: italic;">
+                Copyright
+                &copy; 2024-<span id="year"></span>
+                b1tranger. </p>
+
+
+
+            <div style="margin-bottom: 20px;margin-top: 10px;">
+                <!-- BOTTOM CREDITS -->
+                <p align=center style="color:rgba(0, 0, 0, 0.422);width: 80%;max-width:550px;font-size: small;"><small
+                        style="font-size: x-small;"><b>UNOFFICIAL</b>
+                        Online
+                        Resources Archiver for UITS<br>This project is licensed under the <a
+                            href="https://www.apache.org/licenses/LICENSE-2.0" style="color:rgba(4, 0, 128, 0.806);"
+                            target="_blank">Apache License 2.0</a>.
+                        You may use, modify, and distribute its contents, but you must provide attribution and include
+                        the
+                        original
+                        license.</small></p>
+
+
+                <script>
+                    document.getElementById("year").textContent = new Date().getFullYear();
+                </script>
+            </div>
+        </div>
+        <br>
+        <br>
+    </div>
+    <div class="navbar-5">
+        <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
+        </font>
+
+    </div>
 </body>
 
 </html>
