--- a/Academics.html
+++ b/Academics.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="css/top.navbar.css">
     <link rel="stylesheet" href="css/academics.menubtn.css">
     <link rel="stylesheet" href="css/academics.selector.css">
-    <link rel="stylesheet" href="css/faq.css">
+    <link rel="stylesheet" href="css/faq.dropdown.css">
+    <link rel="stylesheet" href="css/faq.tooltip.css">
+    <link rel="stylesheet" href="css/credit.css">
     <style>
         li {
             padding: 5px;
@@ -549,11 +551,115 @@
                             Link to the Google Drive instead? )</b></small></a></p>
             <br>
         </div>
+        <div class="container" style="width: 90%;max-width: 500px;">
+            <div class="dropdown-container resources" style="border-radius: 20px;">
+                <div class="dropdown-header2" style="background-color: #1B262C;">
+                    <p></p>FAQ
+                </div>
+                <div class="dropdown-content-1">
+                    <p class="dropdown-item2"
+                        style="text-align: left;margin-top: -2px;color: #000000bb;font-size: medium;">
+                        #General Information<br>
+                    <div class="description" style="margin: 15px;color: #00000082;font-size: small;">
+                        This section contains common resources like Notice, course list, outlines etc.
 
+                    </div>
+                    </p>
+                    <hr>
 
+                    <p class="dropdown-item2"
+                        style="text-align: left;margin-top: -2px;color: #000000bb;font-size: medium;">
+                        #Course materials (formerly, "Browse Semesters")<br>
+                    <div class="description" style="margin: 15px;color: #00000082;font-size: small;">
+                        This section contains a Semester Selector to find course materials for your specific semesters.
+                        I
+                        have also
+                        included a Search Bar to search for the exact courses you are looking for. (The results list is
+                        a
+                        bit bugged
+                        on mobile, so try hiding the keyboard first before trying to scroll.)
 
+                    </div>
+                    </p>
+                    <hr>
+
+                    <p class="dropdown-item2"
+                        style="text-align: left;margin-top: -2px;color: #000000bb;font-size: medium;">
+                        #Extracurriculars<br>
+                    <div class="description" style="margin: 15px;color: #00000082;font-size: small;">
+                        Academics are all about CGPA, but Job Market asks more from you. Are you willing to put the
+                        effort?
+
+                    </div>
+                    </p>
+                    <hr>
+
+                </div>
+            </div>
+        </div>
+        <script src="js/faq.dropdown.js"></script>
+        <script src="js/faq.tooltip.js"></script>
 
         <br><br><br>
+        <!-- END CREDIT  -->
+        <div align="center">
+            <div>
+                <!-- SOCIAL LINKS -->
+
+                <p align=center style="color: #00000086;">Join our Socials </p>
+                <p align=center style="color: #00000061;font-size: x-small;margin-top: -10px;"><i>for Updates and
+                        Feedback</i>
+                </p>
+
+                <a href="https://discord.gg/weetUpfS5X" target="_blank"><img src=images\Social-logo\discord-logo.webp
+                        alt="Discord Server (Protein Shake)" width="70" height="70"></a>
+
+                <a href="https://t.me/s/oUITS_ORnU" target="_blank"><img src=images\Social-logo\telegram-logo2.webp
+                        alt="Telegram Channel (oUITS - Online Resources and Updates)" width="70" height="70"></a>
+
+                <a href="https://facebook.com/groups/1074592960836263/" target="_blank"><img
+                        src=images\Social-logo\fb-logo.webp alt="Facebook Group (oUITS - Online Resources)" width="70"
+                        height="70"></a>
+
+                <a href="https://github.com/oU1TS" target="_blank"><img src=images\Social-logo\github-logo2.webp
+                        alt="Facebook Group (oUITS - Online Resources)" width="70" height="70"></a>
+
+            </div>
+
+            <p align=center
+                style="color:rgba(0, 0, 0, 0.422);width: 95%;max-width:500px;font-size: small;font-style: italic;">
+                Copyright
+                &copy; 2024-<span id="year"></span>
+                b1tranger. </p>
+
+
+
+            <div style="margin-bottom: 20px;margin-top: 10px;">
+                <!-- BOTTOM CREDITS -->
+                <p align=center style="color:rgba(0, 0, 0, 0.422);width: 80%;max-width:550px;font-size: small;"><small
+                        style="font-size: x-small;"><b>UNOFFICIAL</b>
+                        Online
+                        Resources Archiver for UITS<br>This project is licensed under the <a
+                            href="https://www.apache.org/licenses/LICENSE-2.0" style="color:rgba(4, 0, 128, 0.806);"
+                            target="_blank">Apache License 2.0</a>.
+                        You may use, modify, and distribute its contents, but you must provide attribution and include
+                        the
+                        original
+                        license.</small></p>
+
+
+                <script>
+                    document.getElementById("year").textContent = new Date().getFullYear();
+                </script>
+            </div>
+        </div>
+        <br>
+        <br>
+    </div>
+    <div class="navbar-5">
+        <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
+        </font>
+
     </div>
 </body>
 
