--- a/References.html
+++ b/References.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/top.navbar.css">
-    <link rel="stylesheet" href="css/faq.css">
+  <link rel="stylesheet" href="css/faq.dropdown.css">
+  <link rel="stylesheet" href="css/faq.tooltip.css">
+    <link rel="stylesheet" href="css/credit.css">
     <style>
         li {
             padding: 5px;
@@ -345,35 +347,13 @@
             </div>
         </nav>
         <br><br><br>
-        <div style="margin-bottom: 100px;">
-            <hr style="border: 5px solid rgba(90, 85, 85, 0.619);
-                      border-radius: 5px;min-width: 200px;width:70%;">
-            <ul>
-                <li><a href="index.html">index.html</a></li>
-                <!-- <li><a href="Extracurriculars.html">Extracurriculars.html</a></li> -->
-                <!-- <li><a href="References.html">References.html</a></li> -->
-            </ul>
-        </div>
+        <ul>
+            <li><a href="page-depth-01/References.html">References.html</a></li>
+            <!-- <li><a href="page-depth-01/Tutorials.html">Tutorials.html</li> -->
+            <!-- <li><a href="page-depth-01/Blog.html">Blog.html</a></li> -->
+        </ul>
 
-        <div class="parent-wrap"
-            style="background-color: #201f1fe4;padding:15px;border-radius:  30px 0 30px 0;width:80%;max-width: 600px;box-shadow: 0.5px 0.5px 10px black;padding-top: 20px;">
 
-            <div style="background-color: rgba(0, 0, 0, 0);border-radius: 5px;">
-                <div class="link-logo"><a href="page-depth-01\References.html"><img
-                            src="images\Section-Logo\logo (5).webp" height="100px" width="100px"
-                            style="box-shadow: 0.5px 0.5px 10px rgb(0, 0, 0);border-radius: 100%;"></a>
-                </div>
-                <p style="text-align: center;margin-top: -2px;font-size: medium;color: rgba(255, 255, 255, 0.696);">
-                    References
-                </p>
-            </div>
-        </div>
-
-        <p align=center style="font-size: x-small;color: #00000086;margin-top: 10px;">This Section was inspired by <a
-                href="https://notebot.netlify.app/" target="_blank"
-                style="color: #0244f99d;">https://notebot.netlify.app/</a>
-        </p>
-        <br><br><br> <br><br><br>
         <div>
             <div class="navbar-5">
                 <font size="24"></font>
@@ -733,6 +713,66 @@
             </div>
         </div>
         <script src="js/faq.js"></script>
+        <!-- END CREDIT  -->
+        <div align="center">
+            <div>
+                <!-- SOCIAL LINKS -->
+
+                <p align=center style="color: #00000086;">Join our Socials </p>
+                <p align=center style="color: #00000061;font-size: x-small;margin-top: -10px;"><i>for Updates and
+                        Feedback</i>
+                </p>
+
+                <a href="https://discord.gg/weetUpfS5X" target="_blank"><img src=images\Social-logo\discord-logo.webp
+                        alt="Discord Server (Protein Shake)" width="70" height="70"></a>
+
+                <a href="https://t.me/s/oUITS_ORnU" target="_blank"><img src=images\Social-logo\telegram-logo2.webp
+                        alt="Telegram Channel (oUITS - Online Resources and Updates)" width="70" height="70"></a>
+
+                <a href="https://facebook.com/groups/1074592960836263/" target="_blank"><img
+                        src=images\Social-logo\fb-logo.webp alt="Facebook Group (oUITS - Online Resources)" width="70"
+                        height="70"></a>
+
+                <a href="https://github.com/oU1TS" target="_blank"><img src=images\Social-logo\github-logo2.webp
+                        alt="Facebook Group (oUITS - Online Resources)" width="70" height="70"></a>
+
+            </div>
+
+            <p align=center
+                style="color:rgba(0, 0, 0, 0.422);width: 95%;max-width:500px;font-size: small;font-style: italic;">
+                Copyright
+                &copy; 2024-<span id="year"></span>
+                b1tranger. </p>
+
+
+
+            <div style="margin-bottom: 20px;margin-top: 10px;">
+                <!-- BOTTOM CREDITS -->
+                <p align=center style="color:rgba(0, 0, 0, 0.422);width: 80%;max-width:550px;font-size: small;"><small
+                        style="font-size: x-small;"><b>UNOFFICIAL</b>
+                        Online
+                        Resources Archiver for UITS<br>This project is licensed under the <a
+                            href="https://www.apache.org/licenses/LICENSE-2.0" style="color:rgba(4, 0, 128, 0.806);"
+                            target="_blank">Apache License 2.0</a>.
+                        You may use, modify, and distribute its contents, but you must provide attribution and include
+                        the
+                        original
+                        license.</small></p>
+
+
+                <script>
+                    document.getElementById("year").textContent = new Date().getFullYear();
+                </script>
+            </div>
+        </div>
+        <br>
+        <br>
+
+    </div>
+
+    <div class="navbar-5">
+        <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
+        </font>
 
     </div>
 </body>
