--- a/References.html
+++ b/References.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/top.navbar.css">
-  <link rel="stylesheet" href="css/faq.dropdown.css">
-  <link rel="stylesheet" href="css/faq.tooltip.css">
+    <link rel="stylesheet" href="css/faq.dropdown.css">
+    <link rel="stylesheet" href="css/faq.tooltip.css">
     <link rel="stylesheet" href="css/credit.css">
     <style>
         li {
@@ -17,6 +19,10 @@
 
         body {
             font-size: large;
+        }
+        /* HIDE SCROLLBAR */
+        ::-webkit-scrollbar {
+            display: none;
         }
     </style>
     <style>
@@ -338,9 +344,9 @@
             <div class="nav-container">
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="Academics.html">Academics.html</a></li>
-                    <li><a href="Extracurriculars.html">Extracurriculars.html</a></li>
-                    <li><a href="#" class="active">References.html</a></li>
+                    <li><a href="Academics.html">Academics</a></li>
+                    <li><a href="Extracurriculars.html">Extracurriculars</a></li>
+                    <li><a href="#" class="active">References</a></li>
                     <!-- <li><a href="https://ouits-res.netlify.app/" target="_blank">Resources</a></li> -->
                     <!-- <li><a href="contact.html">Contact</a></li> -->
                 </ul>
