--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
       <div class="nav-container">
         <ul class="nav-links">
           <li><a href="#" class="active">Home</a></li>
-          <li><a href="Academics.html">Academics.html</a></li>
-          <li><a href="Extracurriculars.html">Extracurriculars.html</a></li>
-          <li><a href="References.html">References.html</a></li>
+          <li><a href="Academics.html">Academics</a></li>
+          <li><a href="Extracurriculars.html">Extracurriculars</a></li>
+          <li><a href="References.html">References</a></li>
           <!-- <li><a href="https://ouits-res.netlify.app/" target="_blank">Resources</a></li> -->
           <!-- <li><a href="contact.html">Contact</a></li> -->
         </ul>
@@ -163,10 +163,10 @@
 
     <!-- <h1 align="center">oUITS-Resources</h1> -->
 
-    <p class="highlights-5" align="center" style="color: rgba(0, 0, 0, 0.649);margin-top: 15px;">
-      <small><i>Browse resources for UITS Students</i></small>
+    <p class="highlights-5" align="center" style="color: rgba(0, 0, 0, 0.649);margin-top: 150px;">
+      <i>Browse resources for UITS Students</i>
       <br>
-      <small style="font-size: x-small;">[mirror: <a href="https://ouits-res.netlify.app/"
+      <small style="font-size: small;">[mirror: <a href="https://ouits-res.netlify.app/"
           style="color:rgba(4, 0, 128, 0.806);">Netlify</a> / <a href="https://b1tranger.github.io/oUITS-Resources/"
           style="color:rgba(4, 0, 128, 0.806);">
           GitHub</a>]</small>
@@ -200,10 +200,34 @@
 
 
 
-    <div style="justify-content: center;display:flex;">
-      <hr style="border: 5px solid rgba(0, 0, 0, 0);
-  border-radius: 5px;margin-left: 150px;margin-right: 150px;margin-bottom: 20px;min-width: 200px;width:50%">
+    <div style="justify-content: center;display:flex;margin-top: 100px;margin-bottom: 50px;">
+      <hr style="border: 5px solid rgba(0, 0, 0, 0.411);
+  border-radius: 5px;margin-left: 50px;margin-right: 50px;margin-bottom: 20px;min-width: 200px;width:70%">
     </div>
+
+
+<div class="topnav-2" style="margin: auto;margin-bottom: 50px;">
+        <div class="dropdown">
+          <button class="dropbtn" onclick="toggleDropdown(this)"
+            style="background-color: rgba(87, 165, 142, 0.521);width: 200px;padding: 15px;border-radius: 10px;color: black;border: 1px solid black;box-shadow: 1px 1px 10px;">More Projects</button>
+          <div class="dropdown-content">
+            <div class="navigation1"></div>
+            <script src="js\Links\drop-link-01.js"></script>
+
+            <div class="navigation2"></div>
+            <script src="js\Links\drop-link-02.js"></script>
+
+            <div class="navigation3"></div>
+            <script src="js\Links\drop-link-03.js"></script>
+
+            <div class="navigation4"></div>
+            <script src="js\Links\drop-link-04.js"></script>
+
+            <div class="navigation5"></div>
+            <script src="js\Links\drop-link-99.js"></script>
+          </div>
+        </div>
+      </div>
 
     <!-- ---------------------------------------------------- -->
 
@@ -280,44 +304,22 @@
 
         </div>
       </div>
-      <!-- ------------------------------------------------------------------------- -->
 
-      <br>
+     
 
 
-      <div class="topnav-2">
-        <div class="dropdown">
-          <button class="dropbtn" onclick="toggleDropdown(this)"
-            style="background-color: #1dcd9efe;color: #ffffff;border-radius: 0px 20px 0px 20px ;box-shadow: 0.5px 0.5px 10px black;">More<br>Projects</button>
-          <div class="dropdown-content">
-            <div class="navigation1"></div>
-            <script src="js\Links\drop-link-01.js"></script>
-
-            <div class="navigation2"></div>
-            <script src="js\Links\drop-link-02.js"></script>
-
-            <div class="navigation3"></div>
-            <script src="js\Links\drop-link-03.js"></script>
-
-            <div class="navigation4"></div>
-            <script src="js\Links\drop-link-04.js"></script>
-
-            <div class="navigation5"></div>
-            <script src="js\Links\drop-link-99.js"></script>
-          </div>
-        </div>
-      </div>
+      
 
 
 
 
 
 
-      <div style="justify-content: center;display:flex;">
+      <!-- <div style="justify-content: center;display:flex;">
         <hr
           style="border: 5px solid rgba(0, 0, 0, 0.619);
       border-radius: 5px;margin-left: 150px;margin-right: 150px;margin-bottom: 50px;min-width: 200px;width:50%;max-width: 500px;;">
-      </div>
+      </div> -->
 
       <!-- TABLE FOR SOCIALS AND END CREDIT -->
 
