--- a/page-depth-01/General-Info.html
+++ b/page-depth-01/General-Info.html
@@ -699,7 +699,7 @@
     </div>
 
     <div class="popup-backdrop" id="popupBackdrop"></div>
-    <script src="js/menubtn.academics.js"></script>
+    <script src="../js/menubtn.academics.js"></script>
     <!-- -------------------------------------------------------------- -->
 
     <div align=center>
