--- a/Academics.html
+++ b/Academics.html
@@ -56,20 +56,35 @@
             transition: transform 1s
         }
 
-        .container-6 {
+        /* .container-6 {
             display: grid;
             place-items: center;
-            grid-template-columns: auto auto;
+            grid-template-columns: auto auto auto;
             border-radius: 15px;
             padding: 10px;
             margin: 20px auto;
             width: 79%;
             max-width: 350px;
+            position: relative;
+            column-gap: 30px;
+            row-gap: 12%;
+        } */
+
+        .container-6 {
+            display: flex;
+            flex-wrap: wrap;
+            /* place-items: center; */
+            /* grid-template-columns: auto auto auto; */
+            justify-content: center;
+            border-radius: 15px;
+            padding: 10px;
+            margin: 20px auto;
+            width: 80%;
+            max-width: 600px;
             /*the button visibility*/
             position: relative;
             column-gap: 30px;
             row-gap: 12%;
-
         }
 
         .container-6 a:hover {
@@ -94,6 +109,12 @@
             /* margin-top: 50px; */
 
         }
+
+        /* .container-5,.my-div {
+            box-shadow:
+                -4px 0px 5px -4px rgba(0, 0, 0, 0.3),
+                4px 0px 5px -4px rgba(0, 0, 0, 0.3);
+        } */
     </style>
 </head>
 
@@ -115,31 +136,31 @@
             </div>
         </nav>
 
-        <ul>
+        <!-- <ul>
             <li><a href="page-depth-01/General-Info.html">General-Info.html</a></li>
             <li><a href="page-depth-01/Semesters.html">Semesters.html</a></li>
-        </ul>
+        </ul> -->
 
 
         <div id="upload-section" class="container-5"
-            style="width:76%;max-width: 600px;border-radius: 30px 0 30px 0;background-color: #1B262C;margin-top: 25px;margin: auto;">
+            style=";border-radius: 15px;background-color: #1B262C;margin-top: 25px;margin: auto;">
 
 
             <p style="text-align: center;color: #ffffffcd;margin-top: -5px;margin-bottom: -5px;">Feeling generous?</p>
 
             <div class="container-6" style="margin-bottom: 15px;">
-                <div>
+                <div style="background-color: rgba(0, 0, 0, 0);border-color: rgba(0, 0, 0, 0.034);">
                     <a class="cell-link" href="https://forms.gle/uFq1vBSUbRhY5CZk6" target="_blank"
-                        style="color: #ffffff;paddingp:15%;background-color: #a5ca88;border-radius: 10px;width: 100px;box-shadow: 1px 2px 10px #000000;text-align: center;padding: 10%;display: block;text-shadow: 1px 2px 1px #000000;">
+                        style="color: #ffffff;padding:15%;background-color: #a5ca88;border-radius: 10px;width: 100px;box-shadow: 1px 2px 10px #000000;text-align: center;display: block;text-shadow: 1px 2px 1px #000000;font-size: medium;">
                         <img src="images\Section-Logo\logo (8).webp" height="120px" width="120px"
                             style="margin-top: -30px;margin-bottom: -25px;">
                         Upload<br>Questions
                         <!-- <i style="font-size: x-small;">(.pdf Upload)</i> -->
                     </a>
                 </div>
-                <div>
+                <div style="background-color: rgba(0, 0, 0, 0);border-color: rgba(0, 0, 0, 0.034);">
                     <a class="cell-link" href="https://forms.gle/ovz4p5VAEsB6G7fp7" target="_blank"
-                        style="color: #ffffff;paddingp:15%;background-color: #3282B8;border-radius: 10px;width: 100px;box-shadow: 1px 2px 10px #000000;text-align: center;padding: 10%;display: block;text-shadow: 1px 2px 1px #000000;">
+                        style="color: #ffffff;padding:15%;background-color: #3282B8;border-radius: 10px;width: 100px;box-shadow: 1px 2px 10px #000000;text-align: center;display: block;text-shadow: 1px 2px 1px #000000;font-size: medium;">
                         <img src="images\Section-Logo\logo (9).webp" height="120px" width="120px"
                             style="margin-top: -30px;margin-bottom: -25px;">
                         Upload<br>Notes
